scrollbar fix

--- a/src/app/file-manager/file-manager.component.css
+++ b/src/app/file-manager/file-manager.component.css
@@ -1,7 +1,7 @@
 .file-manager{
 display: flex;
 height: 100vh;
-overflow: auto;
+/* overflow: auto; */
 background:rgb(248,248,248);
 }
 .file-manager .sidebar{
@@ -45,7 +45,9 @@ span.status{
     margin:20px;
     border:1px solid #ffffff;
     border-radius: 6px;
-    background:#fff;
+     background:#fff; 
+    display: flex;
+    flex-direction: column;
     box-shadow: 0px 10px 30px 0px #878DA626;
 }
 
@@ -246,8 +248,8 @@ td span.exp{
     border:1px solid #e3e5e8;
     border-radius: 6px;
     width: max-content;
-    float:right;
-    margin-right: 30px;
+     float:right; 
+       margin-right: 30px;
 }
 .my-pagination /deep/ .ngx-pagination li{
     border-right:1px solid #e3e5e8;
@@ -255,4 +257,33 @@ td span.exp{
 }
 .my-pagination /deep/ .ngx-pagination li:last-child{
     border-right:none;
+}
+@media(max-width:1365px){
+ 
+.file-manager-content{
+    flex-grow: 1;
+    height: auto;
+    margin:20px;
+    border:1px solid #ffffff;
+    border-radius: 6px;
+    background:#fff; 
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 10px 30px 0px #878DA626;
+}
+.file-manager .sidebar{
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 240px;
+     background:#fff; 
+    height: 150vh;
+    box-shadow: 0px 0px 8px rgba(48, 62, 98, 0.13);
+}   
+.file-manager{
+    display: flex;
+    height: 150vh;
+    /* overflow: auto; */
+    background:rgb(248,248,248);
+    }
 }
